# pgv3

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  application.yaml  build.sh  main.py  pyproject.toml  run.sh
docs/: 00-overview-and-mapping.md  01-project-setup-and-dependencies.md  02-folder-structure-and-config.md  03-db-and-migrations.md  04-common-components-and-exceptions.md  05-api-layer-design.md  06-service-layer-design.md  07-workers-and-event-system.md  08-integration-k8s-storage-messaging.md  09-auth-security-and-common-api.md  10-api.md  20260227.md  spec.md
src/alembic/: env.py
src/api/: app.py
src/api/endpoints/: acl.py  analysis_tool.py  app_access.py  common.py  iris.py  (+4 more)
src/core/: config.py  event_queue.py  process_manager.py
src/db/: base.py  session.py  sync_session.py
src/dto/: app_code.py
src/exceptions/: acl_exceptions.py  analysis_tool_exceptions.py  app_access_exceptions.py  base.py  file_node_exceptions.py
src/middleware/: auth.py
src/security/: jwt_utils.py  session_manager.py
src/services/: acl_service.py  analysis_tool_service.py  app_access_service.py  backup_service.py  common_service.py  file_node_service.py  graphio_service.py  iris_service.py  time_service.py  was_user_service.py
src/tools/: backend_api.py  backend_response.py  cache.py  container_client.py  graphio_client.py  http_client.py  k8s_client.py  messaging.py  meta_acl_client.py  meta_client.py  storage_client.py  taa_client.py
src/utils/: common_response.py  logging.py
src/workers/: fastapi_process.py  monitoring_worker.py  statemachine_worker.py
(+17 files in other folders)
