[tool.poetry]
name = "container-management"
version = "0.1.0"
description = "Container Management System V3 (FastAPI, Python)"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.0"
aiomysql = "^0.2.0"
pymysql = "^1.1.0"
kubernetes = "^30.0.0"
minio = "^7.2.0"
pika = "^1.3.0"
redis = "^5.0.0"
httpx = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.0"}
aiofiles = "^23.2.0"
python-dotenv = "^1.0.0"
greenlet = "^3.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

